--- a/pages/car/car.wxml
+++ b/pages/car/car.wxml
@@ -11,9 +11,12 @@
 		data-tab="{{idx}}"
 		 bindtap="jump" data-url="/pages/goodsDetails/goodsDetails?shop_id=1">
 		<view class="goods1">
+			<view class="scbg">
+				<text class="iconfont iconshanchu fz26"></text>
+			</view>
 			<view class="xuanze" data-selec="{{idx}}" catchtap="select">
 				<view class="xuanze1 {{goods_sele[idx].xuan==true? 'xuanze2':''}}">
-					<icon  wx:if="{{goods_sele[idx].xuan==true}}" type="success" color="#fe0042" />
+					<icon  wx:if="{{goods_sele[idx].xuan==true}}" type="success" size="20" color="#fe0042" />
 				</view>
 			</view>
 			<view class="goodsImg">
@@ -36,9 +39,9 @@
 					bind:focus="onfocus"
 					bind:change="onChange" /> -->
 					<view class="vstepper steppera">
-						<view catchtaptap="onNum" data-idx="{{idx}}" data-ad="-" data-id="{{item.order_cart.order_cart_id}}" class="vantjian">-</view>
+						<view catchtaptap="onNum" data-idx="{{idx}}" data-ad="-" data-id="{{item.order_cart.order_cart_id}}" class="vantjian c9">-</view>
 						<input class="vanipt c6" disabled value="{{ goods_sele[idx].num }}"></input>
-						<view catchtaptap="onNum" data-idx="{{idx}}" data-ad="+" data-id="{{item.order_cart.order_cart_id}}" class="vantjia">+</view>
+						<view catchtaptap="onNum" data-idx="{{idx}}" data-ad="+" data-id="{{item.order_cart.order_cart_id}}" class="vantjia c9">+</view>
 					</view>
 				</view>
 			</view>
@@ -47,7 +50,7 @@
 	<view class="vbottom" wx:if="{{goods.length!==0}}">
 		<view class="selecAll" bindtap="selecAll">
 			<view class="xuanze1 all {{all==true? 'xuanze2':''}}">
-				<icon  wx:if="{{all==true}}" type="success" color="#fe0042" />
+				<icon  wx:if="{{all==true}}" type="success" size="20" color="#fe0042" />
 			</view>
 			全选
 		</view>
