--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -4,6 +4,7 @@ page{
 	background-color: #eeeeee;
 }
 .container{
+	padding-top: 20rpx;
 	padding-bottom: 150rpx;
 }
 .zanwu{
@@ -23,22 +24,39 @@ page{
 	display: flex;
 	align-items: center;
 	border-bottom: 1px solid #ddd;
+	position: relative;
+}
+.scbg{
+	position: absolute;
+	top: 20rpx;
+	right: 20rpx;
+	width: 46rpx;
+	height: 46rpx;
+	line-height: 46rpx;
+	border-radius: 50%;
+	background-color: #333;
+	color: #fff;
+	font-size: 26rpx;
+	/* display: flex;
+	justify-content: space-between;
+	align-items: center; */
+	text-align: center;
 }
 .goodsImg{
 	width: 200rpx;
 	height: 200rpx;
-	border: 1px solid #d2d2d2;
+	/* border: 1px solid #d2d2d2; */
 	margin-right: 22rpx;
 }
 .xuanze{
-	width: 44rpx;
-	height: 44rpx;
+	width: 40rpx;
+	height: 40rpx;
 	padding: 40rpx 30rpx 40rpx 0;
 	
 }
 .xuanze1{
-	width: 44rpx;
-	height: 44rpx;
+	width: 40rpx;
+	height: 40rpx;
 	border-radius: 50%;
 	border: 1px solid #ddd;
 	
@@ -50,7 +68,7 @@ page{
 	flex: 1;
 }
 .goodsname{
-	font-size: 24rpx;
+	font-size: 30rpx;
 	color: #333333;
 	margin-bottom: 20rpx;
 	box-sizing: border-box;
