--- a/pages/goodsDetails/goodsDetails.wxss
+++ b/pages/goodsDetails/goodsDetails.wxss
@@ -124,13 +124,20 @@ image{
 	left: 0;
 	z-index: 99;
 	display: flex;
+	align-items: center;
 	background-color: #fff;
 }
 .opengwc{
-	flex: 1;
+	/* flex: 1; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+}
+.shuxian_x{
+	width: 1px;
+	height: 50rpx;
+	background: #eee;
 }
 .l_icon{
 	width: 66rpx;
@@ -159,7 +166,7 @@ image{
 	color: #333;
 }
 .buybtn{
-	width: 300rpx;
+	/* width: 300rpx; */
 	height: 100rpx;
 	display: flex;
 	justify-content: center;
@@ -169,7 +176,7 @@ image{
 	font-size: 30rpx;
 }
 .jrgwc{
-	width: 300rpx;
+	/* width: 300rpx; */
 	height: 100rpx;
 	display: flex;
 	justify-content: center;
