--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -49,14 +49,14 @@ page{
 	margin-right: 22rpx;
 }
 .xuanze{
-	width: 40rpx;
-	height: 40rpx;
+	width: 36rpx;
+	height: 36px;
 	padding: 40rpx 30rpx 40rpx 0;
 	
 }
 .xuanze1{
-	width: 40rpx;
-	height: 40rpx;
+	width: 36rpx;
+	height: 36rpx;
 	border-radius: 50%;
 	border: 1px solid #ddd;
 	
@@ -110,7 +110,7 @@ page{
 /*步进器*/
 .steppera{
 	width: 150rpx;
-	height: 50rpx;
+	height: 45rpx;
 	border: 1px solid #dcdcdc;
 	display: flex;
 	overflow: hidden;
@@ -118,8 +118,11 @@ page{
 }
 .steppera .vanipt{
 	width: 60rpx;
+	height: 45rpx;
 	border-left: 1px solid #dcdcdc;
 	border-right: 1px solid #dcdcdc;
+	border-bottom: 0;
+	border-top: 0;
 	box-sizing: border-box;
 	background-color: #fff;
 	margin: 0;
@@ -130,6 +133,7 @@ page{
 }
 .steppera .vantjia,.steppera .vantjian{
 	width: 45rpx;
+	height: 45rpx;
 	background-color: #fff;
 	margin: 0;
 	text-align: center;
