--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -47,16 +47,23 @@ page{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	font-size: 28rpx;
+	font-size: 22rpx;
 	color: #666;
+}
+.kficon{
+	width: 100rpx;
+	text-align: center;
 }
 .stateicon{
 	width: 66rpx;
 	height: 66rpx;
 	margin-bottom: 10rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .stateicon text{
-	font-size: 66rpx;
+	font-size: 43rpx;
 	color: #f22f5a;
 	/* font-weight: bold; */
 }
@@ -65,10 +72,19 @@ page{
 	padding: 0 28rpx;
 	box-sizing: border-box;
 	background-color: #fff;
+	border-radius: 12rpx;
+}
+.myguanli1{
+	border-top-left-radius: 12rpx;
+	border-top-right-radius: 12rpx;
+}
+.ddstate{
+	border-bottom-left-radius: 12rpx;
+	border-bottom-right-radius: 12rpx;
 }
 .mycell{
 	width: 100%;
-	height: 124rpx;
+	height: 108rpx;
 	border-bottom: 1px solid #f1f1f1;
 	display: flex;
 	align-items: center;
@@ -99,10 +115,14 @@ page{
 
 .cnext text{
 	font-size: 38rpx;
-	color: #333;
+	/* color: #333; */
 }
 .shuxian{
 	width: 1px;
 	height: 100rpx;
 	background-color: #eeeeee;
+	margin-left: 30rpx;
+}
+.bb0{
+	border-bottom: 0;
 }
