--- a/pages/setyj/setyj.wxss
+++ b/pages/setyj/setyj.wxss
@@ -1,26 +1,77 @@
 /* pages/setyj/setyj.wxss */
-.container{
-	padding: 0 36rpx;
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+  padding: 0rpx 36rpx;
+  box-sizing: border-box;
+} 
+.fabutit{
+	text-align: center;
+	line-height: 150rpx;
+	font-weight: bold;
+	font-size: 40rpx;
+	color: #000;
 }
-.intbox{
-	height: 250rpx;
-	padding: 20rpx;
-	border: 1px solid #ddd;
+.textareabox{
 	display: flex;
-	line-height: 40rpx;
-}
-.thbtn{
-	width: 350rpx;
-	background-color: #E22829;
-	height: 80rpx;
-	line-height: 80rpx;
-	color: #fff;
-	border-radius: 80rpx;
-	font-size: 36rpx;
-}
-.ssint{
+	flex-direction:column ;
 	width: 100%;
-	height: auto;
-	font-size: 36rpx;
-	/* line-height: 50rpx; */
+	padding: 30rpx;
+	box-sizing: border-box;
+	background-color: #f2f2f2;
+	border-radius: 30rpx;
+	margin-bottom: 40rpx;
+}
+.ttaa{
+	width: 100%;
+	height: 150rpx;
+}
+.ttnum{
+	text-align: right;
+	font-size: 24rpx;
+	color: #777;
+}
+.imgbox{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+.addimg{
+	width: 200rpx;
+	height: 200rpx;
+	margin: 10rpx 1.5%;
+	border: 1px solid #ccc;
+	border-radius: 20rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+}
+.addimg1{
+	width: 200rpx;
+	height: 200rpx;
+	margin: 20rpx 1.5%;
+}
+.addimg1>image{
+	width: 100%;
+	height: 100%;
+	border-radius: 20rpx;
+}
+.fz100{
+	font-size: 100rpx;
+}
+.fabubtn{
+	width: 450rpx;
+	height: 80rpx;
+	border-radius: 80rpx;
+	background-color: #E22829;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 34rpx;
+	margin-bottom: 50rpx;
 }
