--- a/pages/OrderDetails/OrderDetails.wxss
+++ b/pages/OrderDetails/OrderDetails.wxss
@@ -220,7 +220,7 @@ image{
 	justify-content: flex-end;
 	align-items: center;
 	font-size: 32rpx;
-	color: #fe0042;
+	color: #f75852;
 	/* padding-bottom: 25rpx; */
 }
 .confirmBtn{
@@ -228,8 +228,8 @@ image{
 	height: 64rpx;
 	border-radius: 32rpx;
 	font-size: 24rpx;
-	color: #f6377a;
-	border:1px solid #f6377a;
+	color: #f75852;
+	border:1px solid #f75852;
 	display: flex;
 	justify-content: center;
 	align-items: center;
