--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -50,8 +50,11 @@ page{
 }
 .xuanze{
 	width: 36rpx;
-	height: 36px;
-	padding: 40rpx 30rpx 40rpx 0;
+	height: 36rpx;
+	padding: 40rpx 30rpx 40rpx 30rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
 }
 .xuanze1{
@@ -181,7 +184,7 @@ page{
 	display: flex;
 	align-items: center;
 	font-size: 24rpx;
-	color: #fe0042;
+	color: #f75852;
 }
 .all.xuanze1{
 	margin-right: 8rpx;
@@ -202,7 +205,7 @@ page{
 .jiesuan{
 	width: 210rpx;
 	height: 100rpx;
-	background: #fe0042;
+	background: #f75852;
 	color: #fff;
 	font-size: 28rpx;
 	display: flex;
