--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -49,8 +49,8 @@ page{
 	margin-right: 22rpx;
 }
 .xuanze{
-	width: 36rpx;
-	height: 36rpx;
+	width: 40rpx;
+	height: 40rpx;
 	padding: 40rpx 30rpx 40rpx 30rpx;
 	display: flex;
 	justify-content: center;
@@ -58,10 +58,14 @@ page{
 	
 }
 .xuanze1{
-	width: 36rpx;
-	height: 36rpx;
+	width: 30rpx;
+	height: 30rpx;
 	border-radius: 50%;
 	border: 1px solid #ddd;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
 }
 .xuanze2{
