--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -42,3 +42,13 @@ page{
 	justify-content: center;
 	align-items: center;
 }
+.bottombox{
+	width: 100%;
+	height: 100rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #eee;
+	color: #999;
+	font-size: 24rpx;
+}
