--- a/pages/pinglun/pinglun.wxss
+++ b/pages/pinglun/pinglun.wxss
@@ -1,6 +1,8 @@
 /* pages/pinglun/pinglun.wxss */
 .contbox{
 	width: 100%;
-	padding: 10rpx 28rpx;
+  min-height: 100vh;
+	padding: 20rpx 0;
 	box-sizing: border-box;
+  background: #eee;
 }
