--- a/pages/Order/Order.wxss
+++ b/pages/Order/Order.wxss
@@ -3,6 +3,10 @@
 	background: #eeeeee;
 	padding-bottom: 100rpx;
 }
+image{
+	width: 100%;
+	height: 100%;
+}
 .address{
 	display: flex;
 	width: 100%;
@@ -119,7 +123,7 @@
 	color: #333;
 }
 .guige_l_name{
-	color: #999;
+	color: #333;
 	margin-right: 25rpx;
 }
 .guige_r{
@@ -157,7 +161,7 @@
 	height: 100rpx;
 	background-color: #f75852;
 	color:#fff;
-	font-size: 28rpx;
+	font-size: 30rpx;
 	display: flex;
 	justify-content: center;
 	align-items: center;
